# VisualAlgorithm

./: LICENSE  VisualAlgorithm.sln
VisualAlgorithmCore/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
VisualAlgorithmCore/docs/: VisualAlgorithmCore_구조도.drawio.xml  렌더링_파이프라인.drawio.xml
VisualAlgorithmCore/hlsl/: SimpleShader.hlsl  VertexShader.hlsl
VisualAlgorithmCore/include/: exception.h  file_read.h  log_macro.h  logger.hpp  model.h  model_dir_read.h  mtl_file_read.h  obj_file_read.h  util.h  vec.h  vector.h
VisualAlgorithmCore/includes/: Buffer.hpp  ConstantBuffer.hpp  Contants.h  Exception.h  FileRead.h  LogMacro.h  Logger.hpp  Model.h  MtlFileRead.h  ObjFileRead.h  RenderableModel.h  Renderer.h  Shader.hpp  Util.h  buffer.hpp  file_read.h  gpu_buffer.hpp  log_macro.h  logger.hpp  model.h  model_dir_read.h  obj_file_read.h  renderable_model.h  util.h  vec.h
VisualAlgorithmCore/includes/BindingStrategy/: IBindingStrategy.h  PSBindingStrategy.h  PSBufferBindingStrategy.h  VSBindingStrategy.h  VSBufferBindingStrategy.h
VisualAlgorithmCore/includes/ObjParse/: NormalParseState.h  UseMtlParseState.h  VertexParseState.h
VisualAlgorithmCore/includes/obj_parse/: FaceParseState.h  IObjParseState.h  MtlLibParseState.h  TextureParseState.h
VisualAlgorithmCore/src/: Logger.cpp  MtlFileRead.cpp  ObjFileRead.cpp  RenderableModel.cpp  Renderer.cpp  Util.cpp  file_read.cpp  logger.cpp  model.cpp  mtl_file_read.cpp  obj_file_read.cpp  renderable_model.cpp  util.cpp
VisualAlgorithmCore/src/BindingStrategy/: PSBindingStrategy.cpp  PSBufferBindingStrategy.cpp  (+2 more)
(+16 files in other folders)
